# aws-sdk-cpp

./: .gitignore  Makefile  README
aws-cpp-sdk/aws-cpp-sdk-core/include/aws/core/: SDKConfig.h
aws-cpp-sdk/aws-cpp-sdk-core/source/: Globals.cpp
s3cpp-lib/: CMakeLists.txt  s3cpp_interface.cpp  s3test.cpp
